feat: add HC-SR04 ultrasonic sensor support * Implement Hcsr04 struct to handle trigger and echo pins * Add measure_distance_cm method to calculate distance in centimeters * Integrate sensor with main loop to continuously measure distance * Update dependencies in Cargo.toml to include esp-idf-sys

--- a/electronics/HC-SRO4/Cargo.toml
+++ b/electronics/HC-SRO4/Cargo.toml
@@ -12,6 +12,7 @@ esp32c3 = []
 [dependencies]
 esp-idf-svc = { version = "0.51", features = ["binstart"] }
 esp-idf-hal = "0.45.2"
+esp-idf-sys = { version = "0.36", features = ["binstart"] }
 anyhow = "1.0.101"
 log = "0.4"
 
